--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body, html{
 	        animation-duration: 4s;
 }
 
-ul{margin:0 auto; width: 260px; height: 20px; display: block; clear: both;}
+ul{margin:0 auto; width: 160px; height: 20px; display: block; clear: both;}
 ul li{
 	font-family: helvetica, arial, sans-serif;
 	font-weight: bold;
@@ -55,10 +55,11 @@ ul li{
 	width: 16px;
 	display: block;
 	color: #95a6c0;
+	text-align: center;
 }
 
 .coming{
-	margin: 0px auto;
+	margin: 5px auto;
 	display: block;
 	text-align: right;
 	width: 253px;
